--- a/src/main/resources/Fxml/Login.fxml
+++ b/src/main/resources/Fxml/Login.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
@@ -10,20 +11,35 @@
       <VBox layoutX="99.0" layoutY="92.0" prefHeight="350.0" prefWidth="240.0" styleClass="login_container_form" stylesheets="@../Styles/login.css" />
       <VBox layoutX="105.0" layoutY="96.0" prefHeight="374.0" prefWidth="246.0" styleClass="login_container_form_internal" stylesheets="@../Styles/login.css" AnchorPane.bottomAnchor="90.0" AnchorPane.leftAnchor="80.0" AnchorPane.rightAnchor="40.0" AnchorPane.topAnchor="70.0">
          <children>
-            <Label text="LOGIN" textFill="WHITE">
-               <font>
-                  <Font size="30.0" />
-               </font>
-            </Label>
-            <TextField promptText="Inserisci il tuo username: " styleClass="input_field" />
-            <PasswordField promptText="Inserisci la tua password: " styleClass="input_field" />
-            <Button id="Bottone_Login" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" text="Button" />
-            <Button id="Bottone_Login" mnemonicParsing="false" text="Button" />
-            <Button id="Bottone_Login" mnemonicParsing="false" text="Button" />
+            <TextField promptText="Inserisci il tuo username: " styleClass="input_field">
+               <VBox.margin>
+                  <Insets top="60.0" />
+               </VBox.margin></TextField>
+            <PasswordField promptText="Inserisci la tua password: " styleClass="input_field">
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin></PasswordField>
+
+            <VBox alignment="CENTER" spacing="10" />
+            <Button mnemonicParsing="false" styleClass="login_button" text="Accedi" />
+            <HBox alignment="CENTER" spacing="10">
+               <Region style="-fx-background-color: #FF7A29; -fx-pref-width: 10; -fx-pref-height: 2;" />
+
+               <Label style="-fx-font-size: 1em; -fx-font-weight: bold; -fx-text-fill: #FFFFFF;-fx-opacity: 0.7; -fx-background-color: transparent;" text="Oppure" textFill="WHITE" />
+
+
+               <Region style="-fx-background-color: #FF7A29; -fx-pref-width: 10; -fx-pref-height: 2;" />
+            </HBox>
+            <Button mnemonicParsing="false" styleClass="login_button" text="Registrati" />
          </children></VBox>
       <ImageView fitHeight="90.0" fitWidth="90.0" layoutX="14.0" layoutY="466.0" pickOnBounds="true" preserveRatio="true" styleClass="login_container_logo" AnchorPane.bottomAnchor="-15.0" AnchorPane.leftAnchor="-10.0">
          <image>
             <Image url="@../Images/LOGO.png" />
          </image></ImageView>
+      <Label layoutX="149.0" layoutY="20.0" styleClass="label_login" text="LOGIN" textFill="WHITE">
+         <font>
+            <Font size="44.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
