--- a/src/main/resources/Fxml/Login.fxml
+++ b/src/main/resources/Fxml/Login.fxml
@@ -1,45 +1,110 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
 <BorderPane id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <right>
-      <HBox prefHeight="500.0" prefWidth="330.0" styleClass="right_side_pane" stylesheets="@../Styles/login.css" BorderPane.alignment="CENTER" />
+      <HBox alignment="TOP_CENTER" prefHeight="500.0" prefWidth="330.0" styleClass="right_side_pane" stylesheets="@../Styles/login.css" BorderPane.alignment="CENTER">
+         <children>
+            <Pane prefHeight="500.0" prefWidth="345.0">
+               <children>
+                  <ImageView fitHeight="79.0" fitWidth="79.0" layoutY="431.0">
+                     <image>
+                        <Image url="@../Images/LOGO.png" />
+                     </image>
+                  </ImageView>
+                  <Label contentDisplay="CENTER" layoutX="106.0" layoutY="157.0" text="Sei nuovo?" textFill="WHITE">
+                     <font>
+                        <Font name="Arial Bold" size="22.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="102.0" layoutY="199.0" text="Entra a far parte&#10;della nostra famiglia" textAlignment="CENTER" textFill="WHITE">
+                     <font>
+                        <Font name="Arial Bold" size="13.0" />
+                     </font>
+                  </Label>
+                  <Button layoutX="60.0" layoutY="290.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="210.0" styleClass="my_button_login" stylesheets="@../Styles/login.css" text="Registrati" />
+                  <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
+               </children>
+            </Pane>
+         </children></HBox>
    </right>
    <center>
       <HBox prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
-            <AnchorPane prefHeight="500.0" prefWidth="670.0">
+            <AnchorPane prefHeight="500.0" prefWidth="670.0" stylesheets="@../Styles/login.css">
                <children>
-                  <Text layoutX="268.0" layoutY="74.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Bentornato,">
+                  <Text layoutX="268.0" layoutY="74.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Bentornato">
                      <font>
-                        <Font name="Arial" size="26.0" />
+                        <Font name="Arial Bold" size="25.0" />
                      </font>
                   </Text>
                   <VBox alignment="TOP_CENTER" layoutX="170.0" layoutY="99.0" prefHeight="357.0" prefWidth="330.0">
                      <children>
-                        <Label alignment="CENTER" prefHeight="20.0" prefWidth="82.0" text="EMAIL">
+                        <Label alignment="CENTER" prefHeight="20.0" prefWidth="82.0" text="Email:">
                            <font>
-                              <Font name="Arial Bold" size="16.0" />
+                              <Font name="Arial Bold" size="14.0" />
                            </font>
+                           <VBox.margin>
+                              <Insets top="5.0" />
+                           </VBox.margin>
                         </Label>
-                        <TextField prefHeight="22.0" prefWidth="330.0" styleClass="input_login">
+                        <TextField prefWidth="330.0" styleClass="input_login" stylesheets="@../Styles/login.css">
                            <opaqueInsets>
                               <Insets />
                            </opaqueInsets>
                            <VBox.margin>
-                              <Insets top="7.0" />
+                              <Insets top="5.0" />
                            </VBox.margin>
                         </TextField>
+                        <Label alignment="CENTER" prefHeight="20.0" prefWidth="169.0" text="Password:">
+                           <font>
+                              <Font name="Arial Bold" size="14.0" />
+                           </font>
+                           <VBox.margin>
+                              <Insets top="15.0" />
+                           </VBox.margin>
+                        </Label>
+                        <PasswordField prefWidth="330.0" styleClass="input_login" stylesheets="@../Styles/login.css" />
+                        <VBox prefHeight="0.0" prefWidth="330.0">
+                           <children>
+                              <Label alignment="TOP_CENTER" text="password dimenticata?">
+                                 <font>
+                                    <Font size="10.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                           <VBox.margin>
+                              <Insets top="3.0" />
+                           </VBox.margin>
+                        </VBox>
+                        <Button mnemonicParsing="false" prefHeight="23.0" prefWidth="345.0" styleClass="my_button_login" stylesheets="@../Styles/login.css" text="Accedi">
+                           <VBox.margin>
+                              <Insets top="30.0" />
+                           </VBox.margin>
+                        </Button>
+                        <Button mnemonicParsing="false" prefHeight="42.0" prefWidth="331.0" styleClass="my_button_google" stylesheets="@../Styles/login.css" text="Continua con Google">
+                           <VBox.margin>
+                              <Insets top="17.0" />
+                           </VBox.margin>
+                           <graphic>
+                              <FontAwesomeIconView glyphName="GOOGLE" size="16" text="" />
+                           </graphic>
+                        </Button>
                      </children>
                   </VBox>
                </children>
