--- a/src/main/resources/Fxml/Login.fxml
+++ b/src/main/resources/Fxml/Login.fxml
@@ -12,11 +12,12 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wepower.wepower.Controllers.LoginController">
+<BorderPane id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/21.0.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wepower.wepower.Controllers.LoginController">
    <right>
       <HBox alignment="TOP_CENTER" prefHeight="500.0" prefWidth="330.0" styleClass="right_side_pane" stylesheets="@../Styles/login.css" BorderPane.alignment="CENTER">
          <children>
@@ -37,7 +38,7 @@
                         <Font name="Arial Bold" size="13.0" />
                      </font>
                   </Label>
-                  <Button layoutX="60.0" layoutY="290.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="210.0" styleClass="my_button_login" stylesheets="@../Styles/login.css" text="Registrati" onAction="#signup_button_click" fx:id="signup_button"/>
+                  <Button fx:id="signup_button" layoutX="60.0" layoutY="290.0" mnemonicParsing="false" onAction="#signup_button_click" prefHeight="39.0" prefWidth="210.0" styleClass="my_button_login" stylesheets="@../Styles/login.css" text="Registrati" />
                   <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
                </children>
             </Pane>
@@ -79,7 +80,12 @@
                               <Insets top="15.0" />
                            </VBox.margin>
                         </Label>
-                        <PasswordField prefWidth="330.0" styleClass="input_login" stylesheets="@../Styles/login.css" />
+                        <StackPane prefWidth="330.0">
+                           <children>
+                              <PasswordField fx:id="passwordF_field" prefWidth="330.0" styleClass="input_login" stylesheets="@../Styles/login.css" />
+                              <TextField fx:id="show_password" styleClass="input_login" stylesheets="@../Styles/login.css" visible="false" />
+                           </children>
+                        </StackPane>
                         <VBox prefHeight="0.0" prefWidth="330.0">
                            <children>
                               <Label alignment="TOP_CENTER" text="password dimenticata?">
@@ -107,6 +113,7 @@
                         </Button>
                      </children>
                   </VBox>
+                  <Button fx:id="eyeButton" layoutX="510.0" layoutY="217.0" mnemonicParsing="false" onAction="#nascondi_password" styleClass="my_button_toggle_pasword" stylesheets="@../Styles/login.css" text="🔍" />
                </children>
             </AnchorPane>
          </children>
