--- a/src/main/resources/Fxml/Login.fxml
+++ b/src/main/resources/Fxml/Login.fxml
@@ -38,7 +38,7 @@
                         <Font name="Arial Bold" size="13.0" />
                      </font>
                   </Label>
-                  <Button fx:id="signup_button" layoutX="60.0" layoutY="290.0" mnemonicParsing="false" onAction="#signup_button_click" prefHeight="39.0" prefWidth="210.0" styleClass="my_button_login" stylesheets="@../Styles/login.css" text="Registrati" />
+                  <Button fx:id="signupButton" layoutX="60.0" layoutY="290.0" mnemonicParsing="false" onAction="#signupButtonClick" prefHeight="39.0" prefWidth="210.0" styleClass="my_button_login" stylesheets="@../Styles/login.css" text="Registrati" />
                   <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
                </children>
             </Pane>
@@ -82,8 +82,8 @@
                         </Label>
                         <StackPane prefWidth="330.0">
                            <children>
-                              <PasswordField fx:id="passwordF_field" prefWidth="330.0" styleClass="input_login" stylesheets="@../Styles/login.css" />
-                              <TextField fx:id="show_password" styleClass="input_login" stylesheets="@../Styles/login.css" visible="false" />
+                              <PasswordField fx:id="passwordField" prefWidth="330.0" styleClass="input_login" stylesheets="@../Styles/login.css" />
+                              <TextField fx:id="showPassword" styleClass="input_login" stylesheets="@../Styles/login.css" visible="false" />
                            </children>
                         </StackPane>
                         <VBox prefHeight="0.0" prefWidth="330.0">
@@ -113,7 +113,7 @@
                         </Button>
                      </children>
                   </VBox>
-                  <Button fx:id="eyeButton" layoutX="510.0" layoutY="217.0" mnemonicParsing="false" onAction="#nascondi_password" styleClass="my_button_toggle_pasword" stylesheets="@../Styles/login.css" text="🔍" />
+                  <Button fx:id="eyeButton" layoutX="510.0" layoutY="217.0" mnemonicParsing="false" onAction="#nascondiPassword" styleClass="my_button_toggle_pasword" stylesheets="@../Styles/login.css" text="🔍" />
                </children>
             </AnchorPane>
          </children>
