--- a/src/main/resources/Fxml/SignUp.fxml
+++ b/src/main/resources/Fxml/SignUp.fxml
@@ -13,11 +13,12 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/21.0.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wepower.wepower.Controllers.SignUpController">
+<BorderPane id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wepower.wepower.Controllers.SignUpController">
    <right>
       <HBox alignment="TOP_CENTER" prefHeight="500.0" prefWidth="330.0" styleClass="right_side_pane" stylesheets="@../Styles/login.css" BorderPane.alignment="CENTER">
          <children>
@@ -38,7 +39,7 @@
                         <Font name="Arial Bold" size="13.0" />
                      </font>
                   </Label>
-                  <Button layoutX="60.0" layoutY="290.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="210.0" styleClass="my_button_login" stylesheets="@../Styles/login.css" text="Accedi" fx:id="loginButton" onAction="#signinButtonClick"/>
+                  <Button fx:id="loginButton" layoutX="60.0" layoutY="290.0" mnemonicParsing="false" onAction="#signinButtonClick" prefHeight="39.0" prefWidth="210.0" styleClass="my_button_login" stylesheets="@../Styles/login.css" text="Accedi" />
                   <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
                </children>
             </Pane>
@@ -117,11 +118,12 @@
                                     <Insets top="7.0" />
                                  </VBox.margin>
                               </Label>
-                              <PasswordField prefWidth="330.0" styleClass="input_login" stylesheets="@../Styles/login.css">
-                                 <VBox.margin>
-                                    <Insets top="5.0" />
-                                 </VBox.margin>
-                              </PasswordField>
+                              <StackPane prefWidth="330.0">
+                                 <children>
+                                    <PasswordField fx:id="PasswordField" prefWidth="330.0" styleClass="input_login" stylesheets="@../Styles/login.css" />
+                                    <TextField fx:id="passwordVisibile" styleClass="input_login" stylesheets="@../Styles/login.css" visible="false" />
+                                 </children>
+                              </StackPane>
                            </children>
                            <padding>
                               <Insets right="10.0" />
@@ -169,16 +171,18 @@
                                     <Insets top="7.0" />
                                  </VBox.margin>
                               </Label>
-                              <PasswordField prefWidth="330.0" styleClass="input_login" stylesheets="@../Styles/login.css">
-                                 <VBox.margin>
-                                    <Insets top="5.0" />
-                                 </VBox.margin>
-                              </PasswordField>
+                              <StackPane prefWidth="330.0">
+                                 <children>
+                                    <TextField fx:id="RepeatPasswordVisibile" styleClass="input_login" stylesheets="@../Styles/login.css" visible="false" />
+                                    <PasswordField fx:id="RepeatPasswordField" prefWidth="330.0" styleClass="input_login" stylesheets="@../Styles/login.css" />
+                                 </children>
+                              </StackPane>
                            </children>
                            <padding>
                               <Insets left="10.0" />
                            </padding>
                         </VBox>
+                        <Button fx:id="eyeButton" layoutX="605.0" layoutY="264.0" mnemonicParsing="false" onAction="#nascondiPassword" styleClass="my_button_toggle_pasword" stylesheets="@../Styles/login.css" text="🔍" />
                      </children>
                   </Pane>
                </children>
