Prima implementazione UI menu

--- a/src/main/resources/Fxml/Client/ClientMenu.fxml
+++ b/src/main/resources/Fxml/Client/ClientMenu.fxml
@@ -10,17 +10,10 @@
 
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="750.0" prefWidth="180.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <AnchorPane prefHeight="750.0" prefWidth="180.0">
+      <AnchorPane prefHeight="750.0" prefWidth="180.0" styleClass="client_menu_container" stylesheets="@../../Styles/clientMenu.css">
          <children>
-            <VBox prefHeight="80.0" prefWidth="160.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-               <children>
-                  <ImageView fitHeight="109.0" fitWidth="121.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../Images/LOGO.png" />
-                     </image>
-                  </ImageView>
-               </children></VBox>
-            <VBox prefHeight="400.0" prefWidth="160.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="100.0">
+            <VBox prefHeight="80.0" prefWidth="160.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+            <VBox layoutY="108.0" prefHeight="400.0" prefWidth="160.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="108.0">
                <children>
                   <Button mnemonicParsing="false" text="Dashboard">
                      <graphic>
