--- a/src/main/resources/Fxml/Client/Dashboard.fxml
+++ b/src/main/resources/Fxml/Client/Dashboard.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane stylesheets="@../../Styles/Dashboard.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane stylesheets="@../../Styles/Dashboard.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wepower.wepower.Controllers.Client.ClientDashboardController">
    <left>
       <Pane prefHeight="1080.0" prefWidth="300.0" BorderPane.alignment="CENTER">
          <children>
@@ -51,30 +51,7 @@
                         <Insets left="20.0" right="20.0" />
                      </VBox.margin>
                   </Separator>
-                  <HBox alignment="CENTER" prefHeight="298.0" prefWidth="1527.0">
-                     <children>
-                        <Pane prefHeight="253.0" prefWidth="350.0" styleClass="pannellino_offerte_dashboard" stylesheets="@../../Styles/Dashboard.css">
-                           <HBox.margin>
-                              <Insets bottom="25.0" left="15.0" right="15.0" top="20.0" />
-                           </HBox.margin>
-                        </Pane>
-                        <Pane prefHeight="298.0" prefWidth="350.0" styleClass="pannellino_offerte_dashboard" stylesheets="@../../Styles/Dashboard.css">
-                           <HBox.margin>
-                              <Insets bottom="25.0" left="15.0" right="15.0" top="20.0" />
-                           </HBox.margin>
-                        </Pane>
-                        <Pane prefHeight="298.0" prefWidth="350.0" styleClass="pannellino_offerte_dashboard" stylesheets="@../../Styles/Dashboard.css">
-                           <HBox.margin>
-                              <Insets bottom="25.0" left="15.0" right="15.0" top="20.0" />
-                           </HBox.margin>
-                        </Pane>
-                        <Pane prefHeight="298.0" prefWidth="350.0" styleClass="pannellino_offerte_dashboard" stylesheets="@../../Styles/Dashboard.css">
-                           <HBox.margin>
-                              <Insets bottom="25.0" left="15.0" right="15.0" top="20.0" />
-                           </HBox.margin>
-                        </Pane>
-                     </children>
-                  </HBox>
+                  <HBox fx:id="displaybannerini" alignment="CENTER" prefHeight="298.0" prefWidth="1527.0" />
                </children>
             </VBox>
          </children>
