--- a/src/main/resources/Styles/bannerStyle.css
+++ b/src/main/resources/Styles/bannerStyle.css
@@ -1,5 +1,5 @@
 .bannerino {
-    -fx-background-color: trasparent;
+    -fx-background-color: transparent;
     -fx-alignment: center;
     -fx-border-color: black;
     -fx-border-width: 2px;
