--- a/src/main/resources/Fxml/Client/Client.fxml
+++ b/src/main/resources/Fxml/Client/Client.fxml
@@ -5,7 +5,7 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.wepower.wepower.Controllers.Client.ClientController"
+            fx:controller="com.wepower.wepower.Controllers.Client.ClientDashboardController"
             prefHeight="400.0" prefWidth="600.0">
 
 </AnchorPane>
