--- a/src/main/resources/Styles/clientMenu.css
+++ b/src/main/resources/Styles/clientMenu.css
@@ -1,3 +1,28 @@
 .client_menu_container {
     -fx-background-color: linear-gradient(from 50% 0% to 50% 100%, rgba(255,255,255,1) 0%, rgba(255,122,41,1) 99%);
 }
+
+.vbox {
+    -fx-padding: 10 10 10 10;
+    -fx-spacing: 20;
+}
+
+.my_button_window {
+    -fx-background-color: #ffffff;
+    -fx-text-fill: black;
+    -fx-font-size: 0.9em;
+    -fx-font-weight: bold;
+    -fx-font-family: "Arial";
+    -fx-border-color: #ff7a29;
+    -fx-border-width: 2px;
+    -fx-border-radius: 30px;
+    -fx-background-radius: 30px;
+    -fx-padding: 10px 30px;
+    -fx-pref-width: 200;
+    -fx-wrap-text: true;
+}
+
+.my_button_window:hover {
+    -fx-cursor: hand;
+    -fx-background-color: #ff7a29;
+}
